# jupyter-playground

./: README.md  index.ipynb  mkdocs.yml  pyproject.toml
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html
myfirstbook/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
