[tool.poetry]
name = "jupyter-playground"
version = "0.1.0"
description = ""
authors = ["Estela Gaspar <54668579+that-firefly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
polars = "^0.20.31"
altair = "^5.3.0"
plotly = "^5.22.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
